--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -39,3 +39,7 @@ monolog:
         console:
             type: console
             process_psr_3_messages: false
+
+lexik_maintenance:
+    authorized:
+        ips: ['172.123.10.14']
