--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,6 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.0",
         "knplabs/knp-gaufrette-bundle": "^0.4.0",
-        "knplabs/knp-snappy-bundle": "^1.4",
         "nelmio/cors-bundle": "^1.5",
         "rctnet/opencnabphp": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
@@ -45,7 +44,8 @@
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
         "vich/uploader-bundle": "^1.5",
-        "white-october/pagerfanta-bundle": "^1.0"
+        "white-october/pagerfanta-bundle": "^1.0",
+        "lexik/maintenance-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
