--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,7 @@ parameters:
     token_ttl: 86400
     http_protocol: http
 
-    email_sender: "noreply@dev.com"
+    email_sender: "%mailer_user%"
     email_contact_to: "neandher89@gmail.com"
 
     site_resetting_email.from: "%email_sender%"
@@ -126,6 +126,7 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
+    port: '%mailer_port%'
     spool: { type: memory }
 
 stof_doctrine_extensions:
