--- a/src/AdminBundle/Resources/config/services.yml
+++ b/src/AdminBundle/Resources/config/services.yml
@@ -91,5 +91,5 @@ services:
     app.admin.download_file_.namer:
         class: AdminBundle\VichUpload\DownloadFileNamer
 
-    app.admin.custom_dir_namer:
-        class: AdminBundle\VichUpload\CustomDirNamer
+    app.admin.custom_file_namer:
+        class: AdminBundle\VichUpload\CustomFileNamer
